[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascp"
version = "0.1.0"
description = "AI Security Control Plane — foundations for policy gateway, assurance runs, and pluggable storage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ASCP contributors" }]
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.9",
    "mypy>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ascp"]
