[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eye-of-sauron"
version = "0.1.0"
description = "Security-pattern scanner for legacy and modern codebases"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0.1",
]

[project.scripts]
eye-of-sauron = "eye_of_sauron.checker:main"

[tool.setuptools]
packages = ["eye_of_sauron"]

[tool.setuptools.package-data]
eye_of_sauron = ["rules/*.yaml"]
